syntax = "proto3";

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc AddNews (News) returns (News) {}
    rpc DeleteNews(NewsId) returns (DeleteResponse) {}
    rpc EditNews(News) returns (EditResponse) {}

}

message NewsId{
    string id = 1;
}



message DeleteResponse{
    string message = 1;
}

message EditResponse{
    string message = 1;
}

message Empty {}

message NewsList {
   repeated News news = 1;
}